# UDMlib

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.md  INSTALL  LICENSE  License.txt  Makefile.am  Makefile.in  NEWS  README  README.md  Readme.md  config.h.in  configure  configure.ac  index.html  params.json  udm-config.in
cmake/: CompileOptionSelector.cmake  FindUDM.cmake  Toolchain_K.cmake  Toolchain_fx10.cmake  Toolchain_fx100.cmake  udm_package.cmake
doc/: CMakeLists.txt  Makefile.am  Makefile.in
doc/doxygen/: doxygen.sh  udmlib.doxyfile
examples/cc/: CMakeLists.txt
examples/cc/cgns/: Makefile.am  Makefile.in  create_cgns.c  create_multi.c  read_cgns.c  user_defined.c  vtk2cgns.c
examples/cc/dfi/: Makefile.am  Makefile.in  dfi_run.sh  dfi_unit.c
examples/cc/partition/: Makefile.am  Makefile.in  partition.c  partition_run.sh  partition_solutions.c  partition_weight.c
examples/cc/timeslice/: Makefile.am  Makefile.in  create_timeslice.c  timeslice.c
examples/cxx/: CMakeLists.txt  run_all.sh
examples/cxx/cgns/: Makefile.am  Makefile.in  cgns_run.sh  create_cgns.cpp  create_multi.cpp  read_cgns.cpp  user_defined.cpp  vtk2cgns.cpp
examples/cxx/dfi/: Makefile.am  Makefile.in  dfi_unit.cpp
examples/cxx/partition/: Makefile.am  Makefile.in  partition.cpp  partition_run.sh  partition_solutions.cpp  partition_weight.cpp
examples/cxx/timeslice/: Makefile.am  Makefile.in  create_timeslice.cpp  timeslice.cpp  timeslice_run.sh
examples/data/: torus.tetra.vtk
include/: UdmBase.h  UdmErrorHandler.h  udm_define.h  udm_errorno.h  udm_memutils.h  udm_mpiutils.h  udm_pathutils.h  udm_strutils.h  udm_version.h  udm_version.h.in  udmlib.h
include/config/: UdmConfigBase.h  UdmDfiConfig.h  UdmDfiKeywords.h  UdmDfiValue.h  UdmDomainConfig.h  UdmFileInfoConfig.h  UdmFilePathConfig.h  UdmFlowSolutionListConfig.h  UdmMpiConfig.h  UdmProcessConfig.h  UdmSettingsConfig.h  UdmSolutionFieldConfig.h  UdmTimeSliceConfig.h  UdmUnitListConfig.h
include/model/: UdmBar.h  UdmCell.h  UdmComponent.h  UdmCoordsValue.h  UdmElements.h  UdmEntity.h  UdmEntityVoxels.h  UdmFlowSolutions.h  UdmGeneral.h  UdmGlobalRankid.h  UdmGridCoordinates.h  UdmICellComponent.h  UdmInfo.h  UdmIterativeData.h  UdmModel.h  UdmNode.h  UdmRankConnectivity.h  UdmSections.h  UdmShell.h  UdmSolid.h  UdmSolutionData.h  UdmUserDefinedDatas.h  UdmZone.h
include/partition/: UdmLoadBalance.h
include/utils/: UdmScannerCells.h  UdmSearchTable.h  UdmSerialization.h  UdmStopWatch.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  UdmBase.cpp  UdmErrorHandler.cpp  udmlib_cc.cpp
src/config/: UdmConfigBase.cpp  UdmDfiConfig.cpp  UdmDfiValue.cpp  UdmDomainConfig.cpp  UdmFileInfoConfig.cpp  UdmFilePathConfig.cpp  UdmFlowSolutionListConfig.cpp  UdmMpiConfig.cpp  UdmProcessConfig.cpp  UdmSettingsConfig.cpp  UdmSolutionFieldConfig.cpp  UdmTimeSliceConfig.cpp  UdmUnitListConfig.cpp
src/model/: UdmBar.cpp  UdmCell.cpp  UdmComponent.cpp  UdmCoordsValue.cpp  UdmElements.cpp  UdmEntity.cpp  UdmEntityVoxels.cpp  UdmFlowSolutions.cpp  UdmGeneral.cpp  UdmGlobalRankid.cpp  UdmGridCoordinates.cpp  UdmInfo.cpp  UdmIterativeData.cpp  UdmModel.cpp  UdmNode.cpp  UdmRankConnectivity.cpp  UdmSections.cpp  UdmShell.cpp  UdmSolid.cpp  UdmSolutionData.cpp  UdmUserDefinedDatas.cpp  UdmZone.cpp
src/partition/: UdmLoadBalance.cpp
src/utils/: UdmScannerCells.cpp  UdmSearchTable.cpp  UdmSerialization.cpp  UdmStopWatch.cpp
tools/udm-frm/: CMakeLists.txt
tools/udm-frm/include/: UdmStaging.h  udmfrm_version.h
tools/udm-frm/src/: Makefile.am  Makefile.in  UdmStaging.cpp  udm_frm.cpp
