###################################################################################
#
# UDMlib - Unstructured Data Management Library
#
# Copyright (C) 2012-2015 Institute of Industrial Science, The University of Tokyo.
# All rights reserved.
#
# Copyright (c) 2015 Advanced Institute for Computational Science, RIKEN.
# All rights reserved.
#
###################################################################################

doc_includedir = $(prefix)/doc
doc_include_HEADERS = \
    $(top_srcdir)/doc/reference.pdf \
    $(top_srcdir)/doc/UDMlib.pdf
